[package]
name = "twitter"
version = "0.1.0"
authors = ["MorganGallant <morgan@morgangallant.com>"]
repository = "https://github.com/MorganGallant/twitter-rs.git"
homepage = "https://github.com/MorganGallant/twitter-rs.git"
license = "Apache-2.0"
readme = "README.md"
description = "[WIP] Efficient Rust Library for Twitter API"

[dependencies]
