[package]
name = "twitter"
version = "0.1.0"
authors = [
    "MorganGallant <morgan@morgangallant.com>",
    "Sergey Galich <sergey.galich@outlook.com>"
    ]
repository = "https://github.com/MorganGallant/twitter-rs.git"
homepage = "https://github.com/MorganGallant/twitter-rs.git"
license = "Apache-2.0"
readme = "README.md"
description = "[WIP] Efficient Rust Library for Twitter API"
edition = "2018"

[dependencies]
serde = "1.0.86"
serde_derive = "1.0.86"
serde_json = "1.0.38"
